feat: DSTEW-1182 fixes for tests